# FlutterDataTransfer

./: README.md
flutter_data_analyzer/: README.md  pubspec.yaml
flutter_data_analyzer/lib/: main.dart  server.dart
flutter_data_analyzer/linux/: CMakeLists.txt
flutter_data_analyzer/linux/runner/: my_application.cc
flutter_data_analyzer/test/: widget_test.dart
input_handler/: CMakeLists.txt
input_handler/libclient/: buffer.cpp  buffer.hpp  socket.cpp  socket.hpp  thread.cpp  thread.hpp
input_handler/src/: main.cpp
